글로벌 예외처리 코드 수정